# freitool

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  rust_build.yml
src/: main.rs
src/data/: app_store_datasource.rs  datasource.rs  google_play_datasource.rs  mod.rs
src/repositories/: datasources.rs  mod.rs  store.rs
