[package]
name = "freitool"
version = "0.1.0-alpha.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
jsonwebtoken = "9.3.0"
pem = "3.0.4"
ring = "0.17.8"
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
